k8s/customer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: telecom
spec:
  selector:
    app: customer
  ports:
    - port: 80
      targetPort: 8080
